--- a/.env
+++ b/.env
@@ -1,7 +1,5 @@
-token=MTMzMTI3ODY3MTU4Mjk4NjI0MQ.GQ9_uI.P_z-E73IhUEpqgd5HvA5lZRjdVIi5_THuVk9l0
+token=MTMzMTI3ODY3MTU4Mjk4NjI0MQ.G2JjT1.HWalkyP977JOcR3UJX1lFZG-TZboLJz7XI7MmY
 clientId=1331278671582986241
 guildId=1335193685264044123
 
 MONGODB_URI=mongodb+srv://PolarBot:SiLwuy1HGhS8FiI9@datacluster.cnzghnd.mongodb.net/
-
-SiLwuy1HGhS8FiI9
