--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"eslint-formatter-compact": "^8.40.0",
 		"eslint-formatter-pretty": "^6.0.1",
 		"prettier": "^3.5.3",
+		"prisma": "^6.11.1",
 		"typescript": "~5.5.4",
 		"zod": "^3.24.1"
 	},
