--- a/package.json
+++ b/package.json
@@ -1,38 +1,28 @@
 {
   "$schema": "https://json.schemastore.org/package.json",
-  "name": "polarbot",
+  "name": "polarbot-monorepo",
   "version": "0.1.0",
   "private": true,
   "type": "module",
+  "packageManager": "pnpm@9.0.0",
   "scripts": {
-    "build": "tsc",
-    "dev": "tsx watch src/index.ts",
-    "lint": "prettier --check . && eslint --ext .ts --format=pretty src",
-    "deploy": "node --require dotenv/config dist/util/deploy.js",
-    "format": "prettier --write . && eslint --ext .ts --fix --format=pretty src",
-    "start": "node --require dotenv/config dist/index.js"
-  },
-  "dependencies": {
-    "@discordjs/core": "^2.1.1",
-    "@prisma/client": "6.12.0",
-    "chalk": "^5.4.1",
-    "discord.js": "^14.20.0",
-    "dotenv": "^16.4.7"
+    "build": "turbo build",
+    "dev": "turbo dev",
+    "lint": "turbo lint",
+    "format": "turbo format",
+    "type-check": "turbo type-check",
+    "clean": "turbo clean"
   },
   "devDependencies": {
-    "@sapphire/ts-config": "^5.0.1",
-    "@types/node": "^22.10.10",
-    "eslint": "^9.24.0",
-    "eslint-config-neon": "^0.2.7",
-    "eslint-formatter-compact": "^8.40.0",
-    "eslint-formatter-pretty": "^6.0.1",
+    "turbo": "^2.5.0",
     "prettier": "^3.5.3",
-    "prisma": "^6.11.1",
-    "tsx": "^4.20.3",
-    "typescript": "~5.5.4",
-    "zod": "^3.24.1"
+    "typescript": "~5.5.4"
   },
   "engines": {
     "node": ">=22.12.0"
-  }
+  },
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ]
 }
